Refactor and clean up admin and client components and update response backend